Added a sample that allows for JMX access